k8s/manifest/service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: rameshkrishnannarakrish/reactprojectwebapp_service1:10342739826
        ports:
        - containerPort: 3001
