k8s/manifest/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: rameshkrishnannarakrish/reactprojectwebapp_service2:10342739826
        ports:
        - containerPort: 3002
