k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.orgramesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service-green
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: service1-service-green
            port:
              number: 3001
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: service1-service-green
            port:
              number: 3002
